# pyfirebirdsql

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST  MANIFEST.in  README  README.rst  pyproject.toml  setup.py  travis.yml
.github/workflows/: test.yml  test_fb25.yml  test_fb3.yml
docs/: .buildinfo  Python-DB-API-2.0.html  beyond-python-db-api.html  changelog.html  concurrency.html  genindex.html  index.html  installation.html  license.html  links.html  objects.inv  py-modindex.html  python-db-api-compliance.html  search.html  searchindex.js  thread-safety-overview.html  tutorial.html
docs/.svn/: all-wcprops  entries
firebirdsql/: __init__.py  arc4.py  chacha.py  chacha20.py  compat.py  consts.py  decfloat.py  err.py  errmsgs.c  event_conduit.py  exceptions.py  fbcore.py  fberrmsgs.py  services.py  setup.py  socketstream.py  srp.py  stream.py  tests.py  tz_map.py  tz_utils.py  utils.py  wireprotocol.py  xdrlib.py  xsqlvar.py
firebirdsql/CVS/: Root  (+2 more)
misc/: SYSDBA.password  errmsgs.c  fbproxy.py  firebird.conf  make_tz_map.py  msgs.h  trace.py
sphinx/: .tutorial.txt.swp  Makefile  Python-DB-API-2.0.rst  Python-DB-API-2.0.txt  README  beyond-python-db-api.rst  beyond-python-db-api.txt  changelog.rst  changelog.txt  concurrency.txt  conf.py  index.txt  installation.rst  installation.txt  license.rst  license.txt  links.rst  links.txt  python-db-api-compliance.rst  python-db-api-compliance.txt  thread-safety-overview.txt  tutorial.rst  tutorial.txt
tests/: tests.py  tests_backup.py  tests_db_info.py  tests_event.py  tests_prep.py  tests_services.py
(+70 files in other folders)
