[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firebirdsql"
description = "Firebird RDBMS bindings for python."
readme = "README.rst"
keywords = ["Firebird"]
authors = [
    { name = "Hajime Nakagami", email = "nakagami@gmail.com" }
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Database',
]
dynamic = ["version"]

[project.urls]
"Project" = "https://github.com/nakagami/pyfirebirdsql/"

[tool.setuptools.dynamic]
version = {attr = "firebirdsql.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["firebirdsql*"]
